Fix events spacing

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -932,38 +932,58 @@ filter: blur(7px);
 
 /* HomePage */
 
+.matchImage {
+  border-radius: 44px;
+  margin-left: 10px;
+  overflow: hidden;
+  width: 44px;
+  height: 44px;
+  box-sizing: border-box;
+  border: 3px solid transparent;
+  -webkit-transition: border .125s ease;
+  transition: border .125s ease;
+}
+
 .eventBackground {
   width: 100%;
   height: 100%;
   padding: 20px;
+  display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
 }
 
-.eventBackground img {
+.eventBackgroundImage {
   position: absolute;
   left: 0;
   top: 0;
   width: 100%;
-  height: auto;
-  opacity: 0.6;
-  z-index: 1;
+  height: 700px;
+  opacity: 0.5;
+  z-index: 0;
 }
 
 .eventTitle {
-  padding: 200px;
   position: relative;
   z-index: 2;
   color: #fff;
-  text-align: center;
 }
 
 .eventSubtitle {
   position: relative;
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
   z-index: 2;
   color: #fff;
 }
 
 .latestEventContainer {
-  
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 30px;
 }
 
 .titleBar:hover {
@@ -998,12 +1018,12 @@ filter: blur(7px);
   justify-content: center;
   align-items: center;
   flex-flow: column wrap;
+  margin: 20%;
 }
 
 .matches{
-  height: 700px;
   display:flex;
-  flex-direction: column;
+  flex-flow: row wrap;
   justify-content: flex-start;
 }
 
@@ -1044,9 +1064,11 @@ filter: blur(7px);
 .home_event {
   display:flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   width: 680px;
-  margin: 0 auto;
+  al
+
+
 
   /*height: 150px;*/
 }
